Add notebook to sphinx
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/source/hadge_output.ipynb
+++ b/docs/source/hadge_output.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with hadge output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook serves to get familiar with the ouput of hadge and reproduce some figures from the manuscript."
+    "This notebook serves to get familiar with the output of hadge and reproduce some figures from the manuscript."
    ]
   },
   {
