pre-commit config
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/source/hadge_output.ipynb
+++ b/docs/source/hadge_output.ipynb
@@ -265,7 +265,11 @@
    ],
    "source": [
     "# The droplet classification by both genoytped- and hashing-based deconvolution methods\n",
-    "classification = pd.read_csv(\"result_test/rescue/summary/classification_all_genetic_and_hash.csv\", delimiter=\"\\t\", index_col=0)\n",
+    "classification = pd.read_csv(\n",
+    "    \"result_test/rescue/summary/classification_all_genetic_and_hash.csv\",\n",
+    "    delimiter=\"\\t\",\n",
+    "    index_col=0,\n",
+    ")\n",
     "classification"
    ]
   },
@@ -508,7 +512,7 @@
    ],
    "source": [
     "# We run only one task for each methd here, remove the \"_1\" suffix\n",
-    "classification.columns = classification.columns.str.replace('_1', '')\n",
+    "classification.columns = classification.columns.str.replace(\"_1\", \"\")\n",
     "# Some methods automatically remove the negative droplets in the final result\n",
     "classification.fillna(value=\"negative\", inplace=True)\n",
     "classification"
@@ -539,15 +543,26 @@
    ],
    "source": [
     "droplet_counts = classification.apply(lambda x: x.value_counts())\n",
-    "methods_all = [\"demuxlet\", \"freemuxlet\", \"vireo\", \"souporcell\", \"scsplit\", \"htodemux\", \"multiseq\", \"hashsolo\", \"hashedDrops\", \"demuxem\"]\n",
+    "methods_all = [\n",
+    "    \"demuxlet\",\n",
+    "    \"freemuxlet\",\n",
+    "    \"vireo\",\n",
+    "    \"souporcell\",\n",
+    "    \"scsplit\",\n",
+    "    \"htodemux\",\n",
+    "    \"multiseq\",\n",
+    "    \"hashsolo\",\n",
+    "    \"hashedDrops\",\n",
+    "    \"demuxem\",\n",
+    "]\n",
     "# Sort columns\n",
     "droplet_counts = droplet_counts[methods_all]\n",
-    "droplet_counts.T.plot(kind='bar', stacked=True, color=['#f93800', '#ffb500', '#007a8b'])\n",
-    "plt.xlabel('Method')\n",
-    "plt.ylabel('Count')\n",
-    "plt.title('Classification of genotyped- and hashing-based deconvolution methods')\n",
+    "droplet_counts.T.plot(kind=\"bar\", stacked=True, color=[\"#f93800\", \"#ffb500\", \"#007a8b\"])\n",
+    "plt.xlabel(\"Method\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.title(\"Classification of genotyped- and hashing-based deconvolution methods\")\n",
     "plt.xticks(rotation=45)\n",
-    "plt.legend(title='Droplet type', loc='upper right')\n",
+    "plt.legend(title=\"Droplet type\", loc=\"upper right\")\n",
     "plt.show()"
    ]
   },
@@ -790,8 +805,12 @@
    ],
    "source": [
     "# The assignment of droplet identities by both genoytped- and hashing-based deconvolution methods\n",
-    "assignment = pd.read_csv(\"result_test/rescue/summary/assignment_all_genetic_and_hash.csv\", delimiter=\"\\t\", index_col=0)\n",
-    "assignment.columns = assignment.columns.str.replace('_1', '')\n",
+    "assignment = pd.read_csv(\n",
+    "    \"result_test/rescue/summary/assignment_all_genetic_and_hash.csv\",\n",
+    "    delimiter=\"\\t\",\n",
+    "    index_col=0,\n",
+    ")\n",
+    "assignment.columns = assignment.columns.str.replace(\"_1\", \"\")\n",
     "assignment.fillna(value=\"negative\", inplace=True)\n",
     "assignment"
    ]
@@ -1338,7 +1357,9 @@
     }
    ],
    "source": [
-    "Image(filename='result_test/rescue/donor_match/freemuxlet_1_vs_htodemux_1/concordance_heatmap.png') "
+    "Image(\n",
+    "    filename=\"result_test/rescue/donor_match/freemuxlet_1_vs_htodemux_1/concordance_heatmap.png\"\n",
+    ")"
    ]
   },
   {
@@ -1611,12 +1632,14 @@
    "source": [
     "droplet_counts = assignment.apply(lambda x: x.value_counts())\n",
     "droplet_counts = droplet_counts[methods_all]\n",
-    "droplet_counts.T.plot(kind='bar', stacked=True, color=['#11abc1', '#df3062', '#f5b935', '#4bac3f'])\n",
-    "plt.xlabel('Method')\n",
-    "plt.ylabel('Count')\n",
-    "plt.title('Assignment of genotyped- and hashing-based deconvolution methods')\n",
+    "droplet_counts.T.plot(\n",
+    "    kind=\"bar\", stacked=True, color=[\"#11abc1\", \"#df3062\", \"#f5b935\", \"#4bac3f\"]\n",
+    ")\n",
+    "plt.xlabel(\"Method\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.title(\"Assignment of genotyped- and hashing-based deconvolution methods\")\n",
     "plt.xticks(rotation=45)\n",
-    "plt.legend(title='Donor identity', loc='lower left')\n",
+    "plt.legend(title=\"Donor identity\", loc=\"lower left\")\n",
     "plt.show()"
    ]
   }
